# ws-bypass-python-ver

./: CMakeLists.txt  LICENSE  README.md  main.py
src/: main.cpp
